<resources>
    <string name="app_name">EpiStalk</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_home">Home</string>
    <string name="sm_cisco">Cisco:</string>
    <string name="sm_midlab">Mid-Lab:</string>
    <string name="sm_labsr">Lab-SR:</string>
    <string name="sm_sm14">SM-14:</string>
    <string name="sm_other">Other:</string>
    <string name="sm_total">Total:</string>
    <string name="sm_othertotal">Total with other:</string>
    <string name="empty_sm">There\'s no one here</string>

    <string name="profile_socket">Socket:</string>
    <string name="profile_login">Login:</string>
    <string name="profile_ip">IP address:</string>
    <string name="profile_timeConnection">Connected the:</string>
    <string name="profile_lastStatusChange">Last status change:</string>
    <string name="profile_inPIE">Is in PIE: </string>
    <string name="profile_location">Location:</string>
    <string name="profile_promo">Promo:</string>
    <string name="profile_status">Status:</string>
    <string name="profile_userdata">User data:</string>

    <string name="sm_description">Screen logo</string>
    <string name="stats_description">Stats logo</string>
    <string name="home_description">Home logo</string>
    <string name="refreshing">Refreshing…</string>
    <string name="vp_cisco">Cisco (</string>
    <string name="vp_home">Home</string>
    <string name="vp_midlab">Mid-Lab (</string>
    <string name="vp_sr">Lab-SR (</string>
    <string name="vp_close">)</string>
    <string name="vp_sm14">SM-14 (</string>
    <string name="vp_other">Other (</string>
    <string name="person_description">Person logo</string>
    <string name="time_description">Time logo</string>
    <string name="location_description">Location logo</string>
    <string name="promo_description">School logo</string>
    <string name="profile_sm">Machine room:</string>
    <string name="no_user">Unable to find user</string>
    <string name="profile_cisco">Cisco</string>
    <string name="profile_midlab">Mid-Lab</string>
    <string name="profile_sr">Lab-SR</string>
    <string name="profile_sm14">SM-14</string>
    <string name="profile_other">Other</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown">Unknown</string>
    <string name="profile">Profile</string>
    <string name="noone_sm">No logo</string>
    <string name="at">at</string>
    <string name="arrow_description">Arrow logo</string>
</resources>
