<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <TextView
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/list_name"
        android:id="@+id/textView"
        android:layout_weight="0.02"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sm_cisco"
        android:id="@+id/textView2"
        android:layout_weight="0.02"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sm_midlab"
        android:id="@+id/textView3"
        android:layout_weight="0.02"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sm_labsr"
        android:id="@+id/textView4"
        android:layout_weight="0.02"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sm_sm14"
        android:id="@+id/textView5"
        android:layout_weight="0.02"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sm_total"
        android:id="@+id/textView7"
        android:layout_weight="0.02"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/accent_material_light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sm_other"
        android:id="@+id/textView6"
        android:layout_weight="0.02"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sm_othertotal"
        android:id="@+id/textView8"
        android:layout_weight="0.02"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>